# PhishGuard

./: .gitattributes  .gitignore  Dockerfile  PhishGuard.pyproj  PhishGuard.sln  README.md  admin_login.py  admin_panel.py  api.py  chatbot_logic.py  cleaned_dataset.csv  compress_model.py  database.py  dataset_importer.py  feedback_handler.py  main_gui.py  ml_model_runner.py  phhishguard.pyproj  phhishguard.sln  phishing_model.pkl  predictions_20250419_183103.csv  pyproject.toml  requirements.txt  start.sh
PhishGuardDesktop/: LICENSE  api.py  auto_refresh.py  dataset_fixed.csv  dataset_manager.py  feature_extraction.py  intent_recognition.py  ml_model_runner.py  ml_wrapper.py  scaler.pkl  utils.py
PhishGuardDesktop/admin_login/_internal/: admin_login.py
PhishGuardDesktop/admin_panel/_internal/: admin_panel.py
PhishGuardDesktop/admin_panel/backups/: phishing_dataset_2025_11_25_175944.csv
PhishGuardDesktop/main_gui/_internal/: README.md  chatbot_logger.py  database_setup.py  logging_system.py  main_gui.py  phishing_check.py  requirements.txt
backups/: phishing_dataset_2025_04_09_214416.csv  phishing_dataset_2025_04_09_214921.csv  phishing_dataset_2025_04_09_220240.csv  phishing_dataset_2025_04_12_195603.csv  phishing_dataset_2025_04_13_160221.csv  phishing_dataset_2025_04_14_154420.csv  phishing_dataset_2025_04_19_200109.csv  phishing_dataset_2025_04_19_210543.csv  phishing_dataset_2025_04_21_231805.csv  phishing_dataset_2025_05_11_210856.csv  phishing_dataset_2025_05_28_141344.csv  phishing_dataset_2025_05_29_094537.csv
dumps/: phishguard.sql
(+7 files in other folders)
